# caffe2_cpp

./: CMakeLists.txt  Caffe2Handler.cpp  Caffe2Handler.hpp  Caffe2TrainNet.cpp  Caffe2TrainNet.hpp  IR.cpp  IR.hpp  Makefile  README.md  main.cpp
cmake/Modules/: FindCaffe2.cmake  FindMKL.cmake
